fixed weird navbar blinking issue and navbar spacing issue on hover

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body{
   margin: 0;
   padding: 5% 5% 5% 15%;
   position: absolute;
-  top: 5%;
+  top: 15px;
   right: 2%;
   font-size: 2em;
   height: 100%;
@@ -117,6 +117,8 @@ main{
   }
   .navbar-link{
     display: flex;
+    width: 100%;
+    justify-content: center;
   }
   .top-navbar {
     display: inline-flex;
@@ -125,10 +127,6 @@ main{
   .page-header{
     flex-direction: column;
     align-items: center;
-  }
-  .top-navbar{
-    justify-content: space-around;
-    width: 100%;
   }
   .page-title{
     width: 80%;
